# simple-rust

./: Cargo.toml  README.md
calculator/src/: main.rs
circles/: Cargo.toml
circles/src/: main.rs
coins/src/: main.rs
countvowels/: Cargo.toml
countvowels/src/: main.rs
currencies/: Cargo.toml
currencies/src/: main.rs
factorial/src/: main.rs
fibonacci/: ]
fibonacci/src/: main.rs
fifthroot/: Cargo.toml
fifthroot/src/: main.rs
grades/src/: main.rs
guessinggame/src/: main.rs
linkedlist/src/: lib.rs  main.rs
matrices/: Cargo.toml
matrices/src/: io.rs  lib.rs  main.rs  mat.rs
movefile/: Cargo.toml  source.txt
movefile/src/: main.rs
palindrome/src/: main.rs
permutations/src/: main.rs
pyramids/: Cargo.toml
pyramids/src/: main.rs
quiz/: Cargo.toml  Quiz.toml
quiz/src/: main.rs
randomfunc/: Cargo.toml
randomfunc/src/: main.rs
reverse/src/: main.rs
reversenums/: Cargo.toml
reversenums/src/: main.rs
sumprimes/: Cargo.toml
sumprimes/src/: main.rs
swapthree/: Cargo.toml
swapthree/src/: main.rs
