[workspace]
members = [
    "factorial",
    "currencies",
    "pyramids",
    "randomfunc",
    "guessinggame",
    "fibonacci",
    "countvowels",
    "fifthroot",
    "permutations",
    "circles",
    "reverse",
    "swapthree",
    "reversenums",
    "calculator",
    "coins",
    "palindrome",
    "grades",
    "sumprimes",
    "quiz",
    "matrices",
    "movefile",
]
